--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -1,58 +1,37 @@
-name: CryptoLib Coverage with MC/DC
+name: CryptoLib Coverage
 
 on:
   push:
     branches:
       - 258-cyclomatic-complexity-and-mcdc-in-ci
     paths-ignore:
-      - 'doc/coverage/*.svg'
+      - 'doc/coverage/line-coverage-badge.svg'
+      - 'doc/coverage/branch-coverage-badge.svg'
   pull_request:
     branches:
       - 258-cyclomatic-complexity-and-mcdc-in-ci
 
 jobs:
-  mcdc-check:
-    runs-on: ubuntu-latest
-    container: 
-      image: registry.gitlab.com/gtd-gmbh/mcdc-checker/mcdc-checker
-    steps:
-    - name: Check out the Repository
-      uses: actions/checkout@v4
-
-    - name: Run MC/DC Checker
-      run: |
-        mkdir -p doc/coverage
-        mcdc_checker -a -j doc/coverage/report.json
-
-    - name: Upload Coverage Report
-      uses: actions/upload-artifact@v3
-      with:
-        name: coverage-report-mcdc
-        path: doc/coverage
-
   coverage:
     runs-on: ubuntu-latest
     container:
-      image: ivvitc/cryptolib:20240814  # Replace with your container if applicable
+      image: ivvitc/cryptolib:20240814
 
     steps:
-    # Step 1: Check out the repository
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch full history for branch operations
 
-    # Step 2: Configure Git safe directory
     - name: Configure Safe Directory
       run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-    # Step 3: Install dependencies
     - name: Install Dependencies
       env:
         DEBIAN_FRONTEND: noninteractive
         TZ: Etc/UTC
       run: |
         apt-get update
-        apt-get install -y gcc g++ gcovr lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 bc tzdata
+        apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 gcovr bc
         pip install pycryptodome
         curl -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 -o /tmp/libgpg-error-1.50.tar.bz2
         tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/
@@ -61,36 +40,53 @@ jobs:
         tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/
         cd /tmp/libgcrypt-1.11.0 && ./configure && make install
         ldconfig
+    - name: Fix Detached HEAD State
+      run: git checkout -B ${GITHUB_REF##*/}
 
-    # Step 4: Build and run tests with instrumentation
-    - name: Build and Run Tests with Instrumentation
+    - name: Build with Coverage Flags
       run: |
         export CFLAGS="-fprofile-arcs -ftest-coverage -g"
         bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
-
-    # Step 5: Generate Coverage Report
-    - name: Generate Coverage Report
+    - name: Generate Coverage Report and Badges
       run: |
         mkdir -p doc/coverage
-        gcovr --branches --xml-pretty --output doc/coverage/coverage.xml
-        gcovr --branches --html --html-details --output doc/coverage/coverage.html
-
-    # Step 6: Upload to Codecov
-    - name: Upload to Codecov
-      uses: codecov/codecov-action@v5
-      env:
-        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
-
-    # Step 7: Commit and push coverage report (optional)
-    - name: Commit Coverage Report
+        gcovr --branches --xml-pretty --exclude-unreachable-branches -o doc/coverage/coverage_report.xml
+        gcovr --branches --html --html-details -o doc/coverage/coverage_report.html
+        # Extract overall coverage metrics from the root <coverage> tag
+        LINE_COVERAGE=$(grep -oP '(?<=<coverage line-rate=")[0-9.]+(?=")' doc/coverage/coverage_report.xml | head -n 1)
+        BRANCH_COVERAGE=$(grep -oP '(?<=branch-rate=")[0-9.]+(?=")' doc/coverage/coverage_report.xml | head -n 1)
+        # Convert to percentages
+        LINE_COVERAGE_PERCENT=$(printf "%.0f" $(echo "$LINE_COVERAGE * 100" | bc))
+        BRANCH_COVERAGE_PERCENT=$(printf "%.0f" $(echo "$BRANCH_COVERAGE * 100" | bc))
+        # Debug extracted values
+        echo "Line Coverage: $LINE_COVERAGE_PERCENT%"
+        echo "Branch Coverage: $BRANCH_COVERAGE_PERCENT%"
+        # Determine colors based on coverage percentages
+        if [ "$LINE_COVERAGE_PERCENT" -ge 80 ]; then
+            LINE_COLOR="brightgreen"
+        elif [ "$LINE_COVERAGE_PERCENT" -ge 50 ]; then
+            LINE_COLOR="yellow"
+        else
+            LINE_COLOR="red"
+        fi
+        if [ "$BRANCH_COVERAGE_PERCENT" -ge 80 ]; then
+            BRANCH_COLOR="brightgreen"
+        elif [ "$BRANCH_COVERAGE_PERCENT" -ge 50 ]; then
+            BRANCH_COLOR="yellow"
+        else
+            BRANCH_COLOR="red"
+        fi
+        # Generate badges with dynamic colors
+        curl -o doc/coverage/line-coverage-badge.svg "https://img.shields.io/badge/line%20coverage-${LINE_COVERAGE_PERCENT}%25-${LINE_COLOR}"
+        curl -o doc/coverage/branch-coverage-badge.svg "https://img.shields.io/badge/branch%20coverage-${BRANCH_COVERAGE_PERCENT}%25-${BRANCH_COLOR}"
+    - name: Commit Coverage Badges
       run: |
         git config user.name "github-actions"
         git config user.email "actions@github.com"
-        git add doc/coverage/*
-        git commit -m "Update coverage reports" || echo "No changes to commit"
+        git add doc/coverage/line-coverage-badge.svg
+        git add doc/coverage/branch-coverage-badge.svg
+        git commit -m "Update coverage badges" || echo "No changes to commit"
         git push origin HEAD
-
-    # Step 8: Upload Coverage Report
     - name: Upload Coverage Report
       uses: actions/upload-artifact@v3
       with:
