--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -72,12 +72,19 @@ jobs:
 
     - name: Run MC/DC Analysis
       run: |
+        # Ensure the output directory exists
+        mkdir -p $GITHUB_WORKSPACE/doc/coverage
+
         # Pull the mcdc_checker Docker image
         docker pull registry.gitlab.com/gtd-gmbh/mcdc-checker/mcdc-checker:latest
 
-        # Run mcdc_checker on source files
+        # Find all relevant source files and pass them to mcdc_checker
+        SOURCE_FILES=$(find $GITHUB_WORKSPACE/src -type f \( -name '*.c' -o -name '*.cpp' \) -print | tr '\n' ' ')
+
+        # Run mcdc_checker with appropriate flags
         docker run --rm -v $GITHUB_WORKSPACE:/workspace -w /workspace registry.gitlab.com/gtd-gmbh/mcdc-checker/mcdc-checker \
-          mcdc_checker -a -j /workspace/doc/coverage/mcdc_report.json /workspace/src
+          mcdc_checker -a -j /workspace/doc/coverage/mcdc_report.json -I /workspace/include $SOURCE_FILES
+
 
     - name: Upload All Artifacts
       uses: actions/upload-artifact@v3
