--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -31,20 +31,12 @@ jobs:
         TZ: Etc/UTC
       run: |
         apt-get update
-        apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 gcovr bc docker.io
-        pip install pycryptodome
-        curl -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 -o /tmp/libgpg-error-1.50.tar.bz2
-        tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/
-        cd /tmp/libgpg-error-1.50 && ./configure && make install
-        curl -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 -o /tmp/libgcrypt-1.11.0.tar.bz2
-        tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/
-        cd /tmp/libgcrypt-1.11.0 && ./configure && make install
-        ldconfig
+        apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 python3-pip python3-venv gcovr bc pipx
+        pipx install --system-site-packages mcdc-checker
 
     - name: Build with Coverage Flags
       run: |
         export CFLAGS="-fprofile-arcs -ftest-coverage -g"
-        export CXXFLAGS="-fprofile-arcs -ftest-coverage -g"
         bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
 
     - name: Generate Coverage Report and Badges
@@ -74,19 +66,14 @@ jobs:
       run: |
         # Ensure the output directory exists
         mkdir -p $GITHUB_WORKSPACE/doc/coverage
-        chmod -R 777 $GITHUB_WORKSPACE/doc/coverage  # Ensure write permissions
 
-        # Debug: List all C source files outside the container
-        echo "C source files on host:"
+        # Debug: List all C source files
+        echo "C source files:"
         find $GITHUB_WORKSPACE/src -type f -name '*.c' -exec echo {} \;
 
-        # Pull the mcdc_checker Docker image
-        docker pull registry.gitlab.com/gtd-gmbh/mcdc-checker/mcdc-checker:latest
-
-        # Run mcdc_checker inside the container with consistent paths
-        docker run --rm -v $GITHUB_WORKSPACE:/workspace -w /workspace registry.gitlab.com/gtd-gmbh/mcdc-checker/mcdc-checker \
-          mcdc_checker -a -j /workspace/doc/coverage/mcdc_report.json \
-          -I /workspace/include $(find $GITHUB_WORKSPACE/src -type f -name '*.c' | sed "s|$GITHUB_WORKSPACE|/workspace|g" | tr '\n' ' ')
+        # Run mcdc_checker on all .c files
+        mcdc_checker -a -j $GITHUB_WORKSPACE/doc/coverage/mcdc_report.json \
+          -I $GITHUB_WORKSPACE/include $(find $GITHUB_WORKSPACE/src -type f -name '*.c' | tr '\n' ' ')
 
     - name: Upload All Artifacts
       uses: actions/upload-artifact@v3
