--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -34,6 +34,13 @@ jobs:
         apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 python3-pip python3-venv gcovr bc pipx
         pipx install --system-site-packages mcdc-checker
 
+    - name: Install Clang Dependencies
+      run: |
+        echo "Installing Clang libraries and Python bindings..."
+        apt-get update
+        apt-get install -y clang libclang-dev
+        pip install clang
+
     - name: Build with Coverage Flags
       run: |
         export CFLAGS="-fprofile-arcs -ftest-coverage -g"
