--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -94,10 +94,17 @@ jobs:
 
         # Run mcdc-checker without failing the step
         echo "Running mcdc-checker..."
-        mcdc-checker -a -v -j $GITHUB_WORKSPACE/doc/coverage/mcdc_report.json \
+        mcdc-checker -a -j $GITHUB_WORKSPACE/doc/coverage/mcdc_report.json \
           -I $GITHUB_WORKSPACE/include $(find $GITHUB_WORKSPACE/src -type f -name '*.c' | tr '\n' ' ') \
           > $GITHUB_WORKSPACE/doc/coverage/mcdc_checker_output.log 2>&1 || true
       shell: bash
+
+    - name: Display MC/DC Checker Output
+      run: |
+        echo "Displaying MC/DC Checker Output:"
+        cat $GITHUB_WORKSPACE/doc/coverage/mcdc_checker_output.log
+      shell: bash
+
 
     - name: Display MC/DC Checker Output
       run: |
