--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -42,6 +42,7 @@ jobs:
         apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 python3-pip python3-venv \
           gcovr bc pipx clang-17 libclang-17-dev
         pipx install --system-site-packages mcdc-checker
+        pipx inject mcdc-checker clang
 
     - name: Build with Coverage Flags
       run: |
