--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -93,11 +93,17 @@ jobs:
         echo "Setting up environment for MC/DC Checker..."
         export PATH=/usr/lib/llvm-19/bin:$PATH
         export LD_LIBRARY_PATH=/usr/lib/llvm-19/lib:$LD_LIBRARY_PATH
-        export PATH=$PATH:~/.local/bin
+        echo "Configuring Clang library path for MC/DC Checker..."
+        python3 -c "
+        import clang.cindex as cindex
+        cindex.Config.set_library_path('/usr/lib/llvm-19/lib')
+        print('Clang library path configured:', cindex.Config.library_path)
+        "
         echo "Running mcdc-checker..."
         mcdc-checker -a -j $GITHUB_WORKSPACE/doc/coverage/mcdc_report.json \
           -I $GITHUB_WORKSPACE/include $(find $GITHUB_WORKSPACE/src -type f -name '*.c' | tr '\n' ' ') \
           > $GITHUB_WORKSPACE/doc/coverage/mcdc_checker_output.log 2>&1 || true
+
 
     - name: Display MC/DC Checker Output
       run: |
