--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -91,7 +91,7 @@ jobs:
     - name: Run MC/DC Analysis
       run: |
         echo "Setting up environment for MC/DC Checker..."
-        export PATH=/usr/lib/llvm-19/bin:$PATH
+        export PATH=/usr/lib/llvm-19/bin:$HOME/.local/bin:$PATH
         export LD_LIBRARY_PATH=/usr/lib/llvm-19/lib:$LD_LIBRARY_PATH
         echo "Configuring Clang library path for MC/DC Checker..."
         python3 -c "
@@ -103,6 +103,7 @@ jobs:
         mcdc-checker -a -j $GITHUB_WORKSPACE/doc/coverage/mcdc_report.json \
           -I $GITHUB_WORKSPACE/include $(find $GITHUB_WORKSPACE/src -type f -name '*.c' | tr '\n' ' ') \
           > $GITHUB_WORKSPACE/doc/coverage/mcdc_checker_output.log 2>&1 || true
+
 
 
     - name: Display MC/DC Checker Output
